# Wendlerizer

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: __init__.py  main.py  models.py  utils.py
src/templates/: base.html  index.html
src/templates/partials/: program.html
